Evalution/AProVE/recursion/Incorrect_Return_2_T.cpp.txt
timeout 900 ./AProVE.sh -m wst --bit-width 64 Incorrect_Return_2_T.cpp
 
 
-------------------------------------------------------------------------------------------------------
 
 
testfile: Incorrect_Return_2_T.cpp
MAYBE
proof of /home/ubuntu/tool/FSE_benchmark/recursion/Incorrect_Return_2_T.cpp
# AProVE Commit ID: 249ab60e2b58fea5661f104665226199f0baff7b jera 20211103 unpublished


Termination of the given C Problem could not be shown:

(0) C Problem


----------------------------------------

(0)
Obligation:
c file /home/ubuntu/tool/FSE_benchmark/recursion/Incorrect_Return_2_T.cpp/home/ubuntu/tool/FSE_benchmark/recursion/Incorrect_Return_2_T.cpp:23:18: error: use of undeclared identifier '__VERIFIER_nondet_char'
        obj[i] = __VERIFIER_nondet_char();
                 ^
/home/ubuntu/tool/FSE_benchmark/recursion/Incorrect_Return_2_T.cpp:24:19: error: use of undeclared identifier '__VERIFIER_nondet_char'
        kobj[i] = __VERIFIER_nondet_char();
                  ^
2 errors generated.

java.io.FileNotFoundException: /tmp/b7fab683-5fdf-4604-be9a-cfc307689389 (没有那个文件或目录)
	at java.base/java.io.FileInputStream.open0(Native Method)
 
